Disable parseDependency for fix the problem
