# starter/internal/example/handler.go
@@ -44,7 +44,6 @@ func (h *Handler) SetRoutes(e *echo.Group) {
 //	@Param			limit	query		int	false	"Limit"
 //	@Param			offset	query		int	false	"Offset"
 //	@Success		200		{object}	ListResp
-//	@Failure		400		{object}	utl.RequestValidationErrorResponse
 //	@Router			/example [get]
 func (h *Handler) List(c echo.Context) error {
 	var query ListQuery
@@ -86,7 +85,6 @@ type ListResp struct {
 //	@Param			limit	query		int		false	"Limit"
 //	@Param			offset	query		int		false	"Offset"
 //	@Success		200		{object}	ListResp
-//	@Failure		400		{object}	utl.RequestValidationErrorResponse
 //	@Router			/example/{id} [get]
 func (h *Handler) One(c echo.Context) error {
 	id := c.Param("id")
@@ -124,7 +122,6 @@ type OneResp struct {
 //	@Produce		json
 //	@Param			req	body		CreateReq	true	"Request"
 //	@Success		200	{object}	CreateResp
-//	@Failure		400	{object}	utl.RequestValidationErrorResponse
 //	@Router			/example [post]
 func (h *Handler) Create(c echo.Context) error {
 	var req CreateReq
@@ -160,7 +157,6 @@ type CreateResp struct {
 //	@Param			id	path		string	true	"ID"
 //	@Param			req	body		EditReq	true	"Request"
 //	@Success		200	{object}	EditResp
-//	@Failure		400	{object}	utl.RequestValidationErrorResponse
 //	@Router			/example/{id} [put]
 func (h *Handler) Edit(c echo.Context) error {
 	id := c.Param("id")
@@ -200,7 +196,6 @@ type EditResp struct {
 //	@Param			id	path		string		true	"ID"
 //	@Param			req	body		DeleteReq	true	"Request"
 //	@Success		200	{object}	DeleteResp
-//	@Failure		400	{object}	utl.RequestValidationErrorResponse
 //	@Router			/example/{id} [delete]
 func (h *Handler) Delete(c echo.Context) error {
 	id := c.Param("id")
